# pingu-line-bot

./: .gitignore  Dockerfile  README.md  activity.py  config.py  gin.go  go.mod  go.sum  line.go  logger.py  main.go  main.py  otel.go  pyproject.toml  requirements.txt  server.py  static.go  workflow.py
.gitea/workflows/: docker.yml
.github/workflows/: docker-publish.yml
.tekton/: kustomization.yaml
.tekton/configurations/: tekton-namereferences.yaml
.tekton/resources/: pipeline.yaml  rbac.yaml  trigger.yaml
static/audio/: fish.m4a
